# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/emacs-common-gentoo/ChangeLog,v 1.24 2009/10/12 16:36:02 armin76 Exp $

  12 Oct 2009; Raúl Porcel <armin76@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  ia64/s390/sh stable wrt #285063

  01 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  Stable on alpha, bug #285063

  27 Sep 2009; nixnut <nixnut@gentoo.org> emacs-common-gentoo-1.2.ebuild:
  ppc stable #285063

  26 Sep 2009; Brent Baude <ranger@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  Marking emacs-common-gentoo-1.2 ppc64 for bug 285063

  20 Sep 2009; Tiago Cunha <tcunha@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  stable sparc, bug 285063

  18 Sep 2009; Jeroen Roovers <jer@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  Stable for HPPA (bug #285063).

  15 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  x86 stable, bug 285063

  15 Sep 2009; Romain Perier <mrpouet@gentoo.org>
  emacs-common-gentoo-1.2.ebuild:
  Stable for amd64, bug #285063.

*emacs-common-gentoo-1.2 (08 Aug 2009)

  08 Aug 2009; Ulrich Mueller <ulm@gentoo.org>
  -emacs-common-gentoo-1.1.ebuild, +emacs-common-gentoo-1.2.ebuild,
  metadata.xml:
  Version bump. Emacs 23 style icons are default now.

*emacs-common-gentoo-1.1 (23 Apr 2009)

  23 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml,
  +emacs-common-gentoo-1.1.ebuild:
  Version bump. New "emacs23icons" USE flag for Emacs 23 style icons.

  14 Apr 2009; Ulrich Mueller <ulm@gentoo.org>
  -emacs-common-gentoo-0.3.ebuild:
  Remove old.

  14 Apr 2009; Jeroen Roovers <jer@gentoo.org>
  emacs-common-gentoo-1.0.ebuild:
  Stable for HPPA (bug #264503).

  12 Apr 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-0.3.ebuild, emacs-common-gentoo-1.0.ebuild:
  Call gnome2_icon_savelist in src_install, bug 155993.
