@@ -1,6 +1,6 @@
 DIST emacs-common-gentoo-1.0.tar.gz 14268 RMD160 3dad4c2955fc8d9be095500305d67c36e587eef0 SHA1 2d646e3761a2eb23c359e0fb45743f553ade07b6 SHA256 eafc05a71b7b77084073ab82e9bf92c4a4dec1b61feb8a7adaa0b3194f95e2cd
 DIST emacs-common-gentoo-1.2.tar.gz 46622 RMD160 88c923d05286b53687e1099294fb579a2f4f5d39 SHA1 4712b6186d4620aaa5258236367d3228f515f341 SHA256 d15f9654214b10e9efc9e38fe45b4e08c3f0cc1c975de34058e4d360d3053108
 EBUILD emacs-common-gentoo-1.0.ebuild 3537 RMD160 dbbac8ecacacb3ecae2f2f75860c915c4cd10a62 SHA1 4a598f1b074859978dbcb950e3b2c23777390da2 SHA256 d4ebda382ef92018720b90d973813e0a4a0d64a393daf2846a5fc57d4019251e
-EBUILD emacs-common-gentoo-1.2.ebuild 3931 RMD160 3bd222a4bd7524ddc68fe50f10fdb3c5d36082d3 SHA1 59b7ba5cc491bab7a694e63158595846436cf2f6 SHA256 691e170726621665521840764e36cd21f0b664480fc0ac75245f92d2ff510ce6
-MISC ChangeLog 6695 RMD160 fe8aa9f5bb681c6ef7db6c4917b9c386e66d75ed SHA1 5215a8662a3e4bfd7482289ba1ef87d339d8e80f SHA256 7350d3a1f4d90ad8dbd168b51ab6e07663ab740bae7290af7f217e020cedc70b
+EBUILD emacs-common-gentoo-1.2.ebuild 4026 RMD160 2f490e6f0346f405b1cd887bac3510d31c6f4852 SHA1 6dd5e816abe0258cc478e273d5ae0dc984cb11bb SHA256 5fc81c3f10cabb0442be21e5de3109226f9b63f5ae8f6b8fe2ecb0a449eadff7
+MISC ChangeLog 6823 RMD160 1883f9d21e3f9e6c394f3d448e1053313b19ea32 SHA1 a10401e69638550bea4d341ec1e75edd4f5ba389 SHA256 4a6f3d0158ae1ef628a648ca4473e88a126e186a8a6d56378d9ff51c08c5a049
 MISC metadata.xml 235 RMD160 94ec7acf062c24ce7a5c9b98fff11c2a68baf269 SHA1 c948e0bb625876a97f14834fe5848367dda93628 SHA256 81f928a2ff996d91f098bc1d718adec61bbb6afa1f8e5f1b29f0931a73902ec1
